fix error on file select

--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -1769,7 +1769,7 @@ label.error {
  * http://stackoverflow.com/questions/2855589/replace-input-type-file-by-an-image
  */
 .openerp .oe-binary-file-set {
-    overflow: hidden;
+   /* overflow: hidden;*/
     position: relative;
 }
 .openerp input.oe-binary-file {
