--- a/project_extended/views/project_task.xml
+++ b/project_extended/views/project_task.xml
@@ -97,19 +97,116 @@
                 </field>
             </field>
         </record>
-        
-        
-<!--        <record id="view_project_tasks_search" model="ir.ui.view">
-            <field name="name">project.tasks.search</field>
+
+
+        <!--        <record id="view_project_tasks_search" model="ir.ui.view">
+                    <field name="name">project.tasks.search</field>
+                    <field name="model">project.task</field>
+                    <field name="type">search</field>
+                    <field name="inherit_id" ref="project.view_task_search_form"/>
+                    <field name="arch" type="xml">
+                        <field name = "name"  position="before">
+                                <filter name="today" icon="terp-go-today" domain="[('date_deadline', '=', time.strftime('%Y-%m-%d'))]" string="Today"/>
+                        </field>
+                    </field>
+                </record>-->
+
+        <record model="ir.ui.view" id="project.view_task_kanban">
+            <field name="name">project.task.kanban</field>
             <field name="model">project.task</field>
-            <field name="type">search</field>
-            <field name="inherit_id" ref="project.view_task_search_form"/>
+            <field name="type">kanban</field>
             <field name="arch" type="xml">
-                <field name = "name"  position="before">
-                        <filter name="today" icon="terp-go-today" domain="[('date_deadline', '=', time.strftime('%Y-%m-%d'))]" string="Today"/>
-                </field>
+                <kanban default_group_by="type_id" >
+                    <field name="color"/>
+                    <field name="priority"/>
+                    <field name="type_id"/>
+                    <field name="user_id"/>
+                    <field name="user_email"/>
+                    <field name="description"/>
+                    <field name="sequence"/>
+                    <field name="state"/>
+                    <field name="kanban_state"/>
+                    <field name="remaining_hours" sum="Remaining Time"/>
+                    <field name="date_deadline"/>
+                    <field name="categ_ids"/>
+                    <templates>
+                        <t t-name="task_details">
+                            <ul class="oe_kanban_tooltip" t-if="record.project_id.raw_value">
+                                <li><b>Project:</b> <field name="project_id"/></li>
+                            </ul>
+                        </t>
+                        <t t-name="kanban-box">
+                            <t t-set="pad_url">http://pad.openerp.com/<t t-raw="_.str.underscored(_.str.trim(record.name.raw_value))"/></t>
+                            <t t-if="record.kanban_state.raw_value === 'blocked'" t-set="border">oe_kanban_color_red</t>
+                            <t t-if="record.kanban_state.raw_value === 'done'" t-set="border">oe_kanban_color_green</t>
+                            <div t-attf-class="#{kanban_color(record.color.raw_value)} #{border || ''}">
+                                <div class="oe_kanban_box oe_kanban_color_border">
+                                    <table class="oe_kanban_table oe_kanban_box_header oe_kanban_color_bgdark oe_kanban_color_border oe_kanban_draghandle">
+                                    <tr>
+                                        <td align="left" valign="middle" width="16">
+                                            <a t-if="record.priority.raw_value == 1" icon="star-on" type="object" name="set_normal_priority"/>
+                                            <a t-if="record.priority.raw_value != 1" icon="star-off" type="object" name="set_high_priority" style="opacity:0.6; filter:alpha(opacity=60);"/>
+                                        </td>
+                                        <td align="left" valign="middle" class="oe_kanban_title" tooltip="task_details">
+                                            <field name="name"/>
+                                        </td>
+                                        <td valign="top" width="22">
+                                            <img t-att-src="kanban_image('res.users', 'image', record.user_id.raw_value[0])" width="22" class="oe_kanban_gravatar" t-att-title="record.user_id.value"/>
+                                        </td>
+                                    </tr>
+                                    </table>
+                                    <div class="oe_kanban_box_content oe_kanban_color_bglight oe_kanban_box_show_onclick_trigger">
+                                        <div class="oe_kanban_description">
+                                            <t t-esc="kanban_text_ellipsis(record.description.value, 160)"/>
+                                            <i t-if="record.date_deadline.raw_value">
+                                                <t t-if="record.description.raw_value">, </t>
+                                                <field name="date_deadline"/>
+                                            </i>
+                                            <span class="oe_kanban_project_times" style="white-space: nowrap; padding-left: 5px;">
+                                                <t t-set="hours" t-value="record.remaining_hours.raw_value"/>
+                                                <t t-set="times" t-value="[
+                                                     [1, (hours gte 1 and hours lt 2)]
+                                                    ,[2, (hours gte 2 and hours lt 5)]
+                                                    ,[5, (hours gte 5 and hours lt 10)]
+                                                    ,[10, (hours gte 10)]
+                                                ]"/>
+                                                <t t-foreach="times" t-as="time"
+                                                    ><a t-if="!time[1]" t-attf-data-name="set_remaining_time_#{time[0]}"
+                                                        type="object" class="oe_kanban_button"><t t-esc="time[0]"/></a
+                                                    ><b t-if="time[1]" class="oe_kanban_button oe_kanban_button_active"><t t-esc="Math.round(hours)"/></b
+                                                ></t>
+                                                <a name="do_open" states="draft" string="Validate planned time and open task" type="object" class="oe_kanban_button oe_kanban_button_active">!</a>
+                                            </span>
+                                        </div>
+                                        <div class="oe_kanban_right">
+                                            <a name="set_kanban_state_blocked" string="Mark as Blocked" kanban_states="normal,done" type="object" icon="kanban-stop"/>
+                                            <a name="set_kanban_state_normal" string="Normal" kanban_states="blocked,done" type="object" icon="gtk-media-play"/>
+                                            <a name="set_kanban_state_done" string="Done" kanban_states="blocked,normal" type="object" icon="kanban-apply"/>
+                                        </div>
+                                        <div class="oe_kanban_clear"/>
+                                    </div>
+                                    <div class="oe_kanban_buttons_set oe_kanban_color_border oe_kanban_color_bglight oe_kanban_box_show_onclick">
+                                        <div class="oe_kanban_left">
+                                            <a string="Edit" icon="gtk-edit" type="edit"/>
+                                            <a string="Change Color" icon="color-picker" type="color" name="color"/>
+                                            <a name="%(project.action_project_task_delegate)d" states="pending,open,draft" string="Delegate" type="action" icon="terp-personal" groups="project.group_delegate_task"/>
+                                            <a name="action_close" states="draft,pending,open" string="Done" type="object" icon="terp-dialog-close"/>
+<field name="categ_ids"/>
+</div>
+                                        <div class="oe_kanban_right">
+                                            <a name="set_kanban_state_blocked" string="Mark as Blocked" kanban_states="normal,done" type="object" icon="kanban-stop"/>
+                                            <a name="set_kanban_state_normal" string="Normal" kanban_states="blocked,done" type="object" icon="gtk-media-play"/>
+                                            <a name="set_kanban_state_done" string="Done" kanban_states="blocked,normal" type="object" icon="kanban-apply"/>
+                                        </div>
+                                        <div class="oe_kanban_clear"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
             </field>
-        </record>-->
+         </record>
 
     </data>
 </openerp>
