--- a/project_extended/views/project_task.xml
+++ b/project_extended/views/project_task.xml
@@ -136,7 +136,6 @@
                             </ul>
                         </t>
                         <t t-name="kanban-box">
-                            <t t-set="pad_url">http://pad.openerp.com/<t t-raw="_.str.underscored(_.str.trim(record.name.raw_value))"/></t>
                             <t t-if="record.kanban_state.raw_value === 'blocked'" t-set="border">oe_kanban_color_red</t>
                             <t t-if="record.kanban_state.raw_value === 'done'" t-set="border">oe_kanban_color_green</t>
                             <div t-attf-class="#{kanban_color(record.color.raw_value)} #{border || ''}">
@@ -162,21 +161,10 @@
                                                 <t t-if="record.description.raw_value">, </t>
                                                 <field name="date_deadline"/>
                                             </i>
-                                            <span class="oe_kanban_project_times" style="white-space: nowrap; padding-left: 5px;">
-                                                <t t-set="hours" t-value="record.remaining_hours.raw_value"/>
-                                                <t t-set="times" t-value="[
-                                                     [1, (hours gte 1 and hours lt 2)]
-                                                    ,[2, (hours gte 2 and hours lt 5)]
-                                                    ,[5, (hours gte 5 and hours lt 10)]
-                                                    ,[10, (hours gte 10)]
-                                                ]"/>
-                                                <t t-foreach="times" t-as="time"
-                                                    ><a t-if="!time[1]" t-attf-data-name="set_remaining_time_#{time[0]}"
-                                                        type="object" class="oe_kanban_button"><t t-esc="time[0]"/></a
-                                                    ><b t-if="time[1]" class="oe_kanban_button oe_kanban_button_active"><t t-esc="Math.round(hours)"/></b
-                                                ></t>
-                                                <a name="do_open" states="draft" string="Validate planned time and open task" type="object" class="oe_kanban_button oe_kanban_button_active">!</a>
-                                            </span>
+                                        </div>
+                                        <div class="oe_kanban_left">
+                                            <a name="work_start_btn" attrs="{'invisible': ['|', ('state', 'not in', ['draft', 'open', 'working']), '&amp;', ('state', '=', 'working'), ('user_is_working', '=', True)]}" type="object" string="Start" icon="gtk-apply"/>
+                                            <a name="work_end_btn" attrs="{'invisible': ['|', ('state', 'not in', ['working', ]), '&amp;', ('state', '=', 'working'), ('user_is_working', '=', False)]}" type="object" string="Stop" icon="gtk-cancel"/>
                                         </div>
                                         <div class="oe_kanban_right">
                                             <a name="set_kanban_state_blocked" string="Mark as Blocked" kanban_states="normal,done" type="object" icon="kanban-stop"/>
@@ -191,12 +179,7 @@
                                             <a string="Change Color" icon="color-picker" type="color" name="color"/>
                                             <a name="%(project.action_project_task_delegate)d" states="pending,open,draft" string="Delegate" type="action" icon="terp-personal" groups="project.group_delegate_task"/>
                                             <a name="action_close" states="draft,pending,open" string="Done" type="object" icon="terp-dialog-close"/>
-<field name="categ_ids"/>
-</div>
-                                        <div class="oe_kanban_right">
-                                            <a name="set_kanban_state_blocked" string="Mark as Blocked" kanban_states="normal,done" type="object" icon="kanban-stop"/>
-                                            <a name="set_kanban_state_normal" string="Normal" kanban_states="blocked,done" type="object" icon="gtk-media-play"/>
-                                            <a name="set_kanban_state_done" string="Done" kanban_states="blocked,normal" type="object" icon="kanban-apply"/>
+                                            <field name="categ_ids"/>
                                         </div>
                                         <div class="oe_kanban_clear"/>
                                     </div>
