--- a/task_time_control/wizard/task_time_control_confirm_wizard.xml
+++ b/task_time_control/wizard/task_time_control_confirm_wizard.xml
@@ -11,9 +11,12 @@
                     <newline/>
                     <field name="name" string="Name"/>
                     <newline/>
-                    <field name="task_date" />
+                    <field name="issue_ids" invisible="1"/>
+                    <field name="issue_id"  attrs="{'invisible': [('issue_ids', '=', False)]}"/>
+                    <field name="task_date"/>
                     <newline/>
                     <field name="time" string="Time" widget="float_time"/>
+
                     <group colspan="4">
                         <button string="Cancel" special="cancel" icon="gtk-cancel"/>
                         <button string="Confirm" name="close_confirm" type="object" icon="gtk-ok"/>
