--- a/web_client/ea_web-github/addons/web_kanban/static/src/css/kanban.css
+++ b/web_client/ea_web-github/addons/web_kanban/static/src/css/kanban.css
@@ -162,6 +162,13 @@
 .openerp .oe_kanban_view .oe_kanban_add {
   top: -8px;
 }
+.openerp .oe_kanban_ungrouped .oe_kanban_record {
+    float: left;
+    padding: 2px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
 .openerp .oe_kanban_view .oe_kanban_header .oe_dropdown_toggle {
   top: -2px;
   height: 14px;
