--- a/project_task_issues/views/project_issue_view.xml
+++ b/project_task_issues/views/project_issue_view.xml
@@ -46,5 +46,41 @@
                 </xpath>
             </field>
         </record>
+
+        <record model="ir.ui.view" id="project_issue_sheet.project_issue_form_view">
+            <field name="name">Project Issue Tracker Form</field>
+            <field name="model">project.issue</field>
+            <field name="inherit_id" ref="project_issue.project_issue_form_view" />
+            <field name="type">form</field>
+            <field name="arch" type="xml">
+                <field name="project_id" position="attributes">
+                    <attribute name="on_change">on_change_project(project_id, email_from)</attribute>
+                </field>
+                <!--<field name="task_id" position="attributes">-->
+                    <!--<attribute name="on_change">onchange_task_id(task_id, email_from, context)"</attribute>-->
+                <!--</field>-->
+                <xpath expr="/form/notebook" position="before">
+                    <field name="analytic_account_id" domain="[('parent_id','!=',False),('partner_id', '=', partner_id),('type', '!=', 'view')]" on_change="on_change_account_id(analytic_account_id)" invisible="1"/>
+                </xpath>
+                <!--<xpath expr="//notebook/page[@string='Extra Info']" position="before">-->
+                	<!--<page string="Worklogs">-->
+                        <!--<field name="timesheet_ids" colspan="4" nolabel="1" context="{'default_user_id' : user_id, 'default_account_id' : analytic_account_id}">-->
+                            <!--<tree editable="top" string="Timesheets">-->
+                                <!--<field name="name"/>-->
+                                <!--<field name="unit_amount" on_change="on_change_unit_amount(product_id, unit_amount, False, product_uom_id,journal_id)" widget="float_time"/>-->
+                                <!--<field name="account_id" invisible="0" domain="[('partner_id', '=', parent.partner_id)]" on_change="on_change_account_id(account_id)"/>-->
+                                <!--<field name="date"/>-->
+                                <!--<field name="user_id"/>-->
+                                <!--<field invisible="1" name="journal_id"/>-->
+                                <!--<field invisible="1" name="product_id"/>-->
+                                <!--<field invisible="1" name="product_uom_id" on_change="on_change_unit_amount(product_id, unit_amount, False, product_uom_id,journal_id)"/>-->
+                                <!--<field invisible="1" name="amount"/>-->
+                                <!--<field invisible="1" name="general_account_id"/>-->
+                            <!--</tree>-->
+                        <!--</field>-->
+                    <!--</page>-->
+                <!--</xpath>-->
+            </field>
+        </record>
     </data>
 </openerp>
