--- a/stock_move_extended/views/stock_move_view.xml
+++ b/stock_move_extended/views/stock_move_view.xml
@@ -93,10 +93,10 @@
                     <field name="default_code" />
                 </field>
                 <field name="picking_id" position="after">
-                    <button name="picking_open" type="object" icon="STOCK_INDEX" attrs=""/>
+                    <button name="picking_open" type="object" icon="gtk-zoom-in" attrs=""/>
                 </field>
                 <field name="origin" position="after">
-                    <button name="origin_open" type="object" icon="STOCK_INDEX" attrs=""/>
+                    <button name="origin_open" type="object" icon="gtk-zoom-in" attrs=""/>
                     <field name="origin_date" groups="stock.view_origin_date" />
                 </field>
                 <field name="product_id" position="after">
