--- a/web_client/ea_web-github/addons/web/static/lib/jquery.ui/css/smoothness/jquery-ui-1.8.17.custom.css
+++ b/web_client/ea_web-github/addons/web/static/lib/jquery.ui/css/smoothness/jquery-ui-1.8.17.custom.css
@@ -385,6 +385,7 @@
 .ui-menu .ui-menu-item a.ui-state-active {
 	font-weight: normal;
 	margin: -1px;
+	background: #00a3da;
 }
 /*
  * jQuery UI Button 1.8.17
