--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -68,12 +68,12 @@ body.openerp {
     font-family: 'Roboto', sans-serif;
 }
 
-.openerp, 
-.openerp textarea, 
+.openerp,
+.openerp textarea,
 .openerp input,
-.openerp select, 
+.openerp select,
 .openerp option,
-.openerp button, 
+.openerp button,
 .openerp .ui-widget {
 
     font-family: 'Roboto', sans-serif;
@@ -404,15 +404,15 @@ body.openerp {
 
 ul.db_options li {
     padding: 5px 0 10px 5px;
-    background: #949292; /* Old browsers 
+    background: #949292; /* Old browsers
     background: -moz-linear-gradient(top, #949292 30%, #6d6b6b 95%, #282828 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(30%,#949292), color-stop(95%,#6d6b6b), color-stop(100%,#282828));
     background: -webkit-linear-gradient(top, #949292 30%,#6d6b6b 95%,#282828 100%);
-    background: -o-linear-gradient(top, #949292 30%,#6d6b6b 95%,#282828 100%); 
+    background: -o-linear-gradient(top, #949292 30%,#6d6b6b 95%,#282828 100%);
     background: -ms-linear-gradient(top, #949292 30%,#6d6b6b 95%,#282828 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#949292', endColorstr='#282828',GradientType=0 );
-    background: linear-gradient(top, #949292 30%,#6d6b6b 95%,#282828 100%); 
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#949292', endColorstr='#5B5A5A',GradientType=0 ); 
+    background: linear-gradient(top, #949292 30%,#6d6b6b 95%,#282828 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#949292', endColorstr='#5B5A5A',GradientType=0 );
     border: none;
 */
     /* overriding jquery ui */
@@ -499,14 +499,14 @@ label.error {
 .openerp .menu {
     height: 24px;
 
-    background: #f7f7f7; /* Old browsers 
-    background: -moz-linear-gradient(top, #FAFAFA 0%, #FAFAFA 8%, #transparent 100%); 
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FAFAFA), color-stop(8%,#FAFAFA), color-stop(100%,#transparent)); 
+    background: #f7f7f7; /* Old browsers
+    background: -moz-linear-gradient(top, #FAFAFA 0%, #FAFAFA 8%, #transparent 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FAFAFA), color-stop(8%,#FAFAFA), color-stop(100%,#transparent));
     background: -webkit-linear-gradient(top, #FAFAFA 0%,#FAFAFA 8%,#transparent 100%);
-    background: -o-linear-gradient(top, #FAFAFA 0%,#FAFAFA 8%,#transparent 100%); 
+    background: -o-linear-gradient(top, #FAFAFA 0%,#FAFAFA 8%,#transparent 100%);
     background: -ms-linear-gradient(top, #FAFAFA 0%,#FAFAFA 8%,#transparent 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FAFAFA', endColorstr='#f7f7f7',GradientType=0 ); 
-    background: linear-gradient(top, #FAFAFA 0%,#FAFAFA 8%,#transparent 100%); 
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FAFAFA', endColorstr='#f7f7f7',GradientType=0 );
+    background: linear-gradient(top, #FAFAFA 0%,#FAFAFA 8%,#transparent 100%);
 */
     float: left;
     position: absolute;
@@ -541,14 +541,14 @@ label.error {
 .openerp .menu a:hover,
 .openerp .menu a:focus,
 .openerp .menu a.active {
-    background: #FAFAFA; 
-/* 
+    background: #FAFAFA;
+/*
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#444', endColorstr='#f7f7f7',GradientType=0 );
-    color: #f7f7f7; 
+    color: #f7f7f7;
 */
     color: #3b5998;
     font-weight: bold;
-    font-size: small;    
+    font-size: small;
 }
 
 /* Secondary Menu */
@@ -960,7 +960,7 @@ label.error {
     font-weight: normal;
     padding: 1px 0 1px 10px;
     text-decoration: none;
-    
+
 }
 .openerp .searchview_group_string:hover {
     background-color: #cccccc;
@@ -1673,7 +1673,7 @@ label.error {
     vertical-align: top;
 }
 /* vertically recentering filter management select tag */
-.openerp select.oe_search-view-filters-management { 
+.openerp select.oe_search-view-filters-management {
     margin-top:2px;
 }
 
@@ -1785,6 +1785,8 @@ label.error {
     -ms-filter: "alpha(opacity=0)";
     margin: 0;
     padding:0;
+    min-height: 25px;
+    width: 88px;
 }
 
 /* Widgets */
@@ -2224,7 +2226,7 @@ label.error {
     width: 100%;
     background-color : #FAFAFA;
     border-spacing: 0;
-    
+
 }
 .openerp .oe-treeview-table tr:hover{
     color: blue;
@@ -2381,7 +2383,7 @@ ul.oe-arrow-list li.oe-arrow-list-selected .oe-arrow-list-after {
     width:100%;
     border-collapse : collapse;
     margin-left: -12px;
-    
+
     width: 100%;
     background-color : white;
     border-spacing: 0;
@@ -2390,7 +2392,7 @@ ul.oe-arrow-list li.oe-arrow-list-selected .oe-arrow-list-after {
     text-align: center;
     white-space: nowrap;
     border: 1px solid #D8D8D8;
-    
+
     cursor: pointer;
 /*    font-size: 90%; */
 }
