--- a/web_client/ea_web-github/addons/web_mobile/static/lib/jquery_mobile/css/jquery-ui-1.8.9.custom.css
+++ b/web_client/ea_web-github/addons/web_mobile/static/lib/jquery_mobile/css/jquery-ui-1.8.9.custom.css
@@ -393,6 +393,7 @@
 .ui-menu .ui-menu-item a.ui-state-active {
 	font-weight: normal;
 	margin: -1px;
+	background: #00a3da;
 }
 /*
  * jQuery UI Button 1.8.9
