--- a/purchase_no_gap/views/purchase_view.xml
+++ b/purchase_no_gap/views/purchase_view.xml
@@ -21,5 +21,18 @@
                 
             </field>
         </record>
+
+        <record id="view_purchase_order_no_gap_search" model="ir.ui.view">
+            <field name="name">purchase.order.no_gap.search</field>
+            <field name="model">purchase.order</field>
+            <field name="type">search</field>
+            <field name="inherit_id" ref="purchase.view_purchase_order_filter"/>
+            <field name="arch" type="xml">
+                <field name="name" position="replace" >
+                    <field name="name" filter_domain="['|', ('name','ilike',self),('purchase_order_request','ilike',self)]" string="Reference"/>
+                </field>
+
+            </field>
+        </record>
     </data>
 </openerp>
