--- a/sale_order_confirm/views/sale_order_menu.xml
+++ b/sale_order_confirm/views/sale_order_menu.xml
@@ -1,6 +1,10 @@
 <openerp>
     <data>
 
+        <record id="base.menu_invoiced" model="ir.ui.menu">
+            <field name="groups_id" eval="[(6, 0, [ref('account.group_account_invoice')])]" />
+        </record>
+
         <record id="action_order_form_quotation_smart" model="ir.actions.act_window">
             <field name="name">Quotation Orders Smart</field>
             <field name="type">ir.actions.act_window</field>
