--- a/sale_order_confirm/views/sale_shop_view.xml
+++ b/sale_order_confirm/views/sale_shop_view.xml
@@ -10,6 +10,7 @@
                 <form string="Sales Shop">
                     <group col="6" colspan="4">
                         <field name="name" select="1" colspan="2"/>
+                        <field name="sequence" />
                     </group>
                     <notebook colspan="4">
                         <page string="Info">
